--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ﻿<!doctype html>
-<html lang="ru">
+<html lang="ua">
     <head>
         <title>ДЗ2</title>
 		<meta charset="utf-8"/>
@@ -13,78 +13,80 @@
 			<linl rel="stylesheet" href="css/reset.css"/>
     </head>
     <body>
-    <header class="menu">
+    <header class="top-menu">
 		<div class="container">
 	    <a class="logo" href="./index.html">Web<span class="logo-color-black">Studio</span></a>
 		<nav class="navigation">
 			<ul>
-			    <li><a href="./index.html">Студия</a></li>
-<li><a href="./portfolio.html">Портфолио</a></li>
-<li><a href="#Kontakti">Контакты</a></li>
+			    <li><a href="./index.html">Студія</a></li>
+<li><a href="./portfolio.html">Портфоліо</a></li>
+<li><a href="#Kontakti">Контакти</a></li>
 </ul>
 </nav>
 <ul class="top">
-				    <li class="right"><a href="mailto:example@mail.com">info@devstudio.com</a></li>
-				    <li class="right"><a href="#Phone">+380961111111</a></li>
+				    <li class="right"><a href="mailto:example@mail.com">dimon_zd@i.ua</a></li>
+				    <li class="right"><a href="#Phone">+380638036740</a></li>
 			    </ul>
 			</div>
 		    </header>
     <main>
-		<div class="container">
 	    <section class="hero">
-	    <h1>Эффективные решения для вашего бизнеса</h1>
-<button type="button">Заказать услугу</button>
+		    		<div class="container">
+					<h1>Ефективні рішення для Вшего бізнесу</h1>
+					<button type="button">Замовити послугу</button>
 	    </section>
         <section class="info">
-		<h2>Примущества</h2>
+		<h2>Переваги</h2>
 		<ul>
 			<li>
-            <h3>Внимание к деталям</h3>
-            <p>Идейные соображения а также начало повседневной работы по формированию позиции.</p>
+				<h3>Увага до деталей</h3>
+            <p>Переробляємо нюанси для ідеальної сдачі проєкту</p>
 		</li>
 		<li>
-            <h3>Пунктуальность</h3>
-            <p>Задача организации, в особености рамки и место обучения кадров </p>
-	</li>
-            <li>
-		    <h3>Планирование</h3>
-            <p>Равным образом консцльтация с широким активом в значительной степени</p>
-</li>
+            <h3>Пунктуальність</h3>
+			<p>Своєчасна здача матеріалу</p>
+		</li>
+                <li>
+		    <h3>Планування</h3>
+		    <p>Розрахунок сил та графіку роботи</p>
+		</li>
 		<li>
-            <h3>Современые технологии</h3>
-            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий..</p>
+            <h3>Сучасні технології</h3>
+            <p>Швидка розробка новітніх технологій</p>
 		</li>
 		</ul>
         </section>
         <section class="img">
-<h2>Чем мы занимаемся </h2>
+<h2>Чем Ми займаємося </h2>
 		<ul>
 			<li><img src="images/0.jpg" width="370" height="294" alt="Computer coding"/></li>
 			<li><img src="images/1.jpg" width="370" height="294" alt="Computer phone"/></li>
 			<li><img src="images/2.jpg" width="370" height="294" alt="Computer color spectr"/></li>
-			</ul>
+		</ul>
         </section>
+		    </div>
             <section class="person">
-			<h2>Наша команда</h2>
+		    <div class="container">
+			<h2>Наша Команда</h2>
 		    <ul>
 		    <li>
 			    <img src="images/5.jpg" width="270" height="260" alt="persons"/>
-			    <h3>Игорь демьяненко</h3>
+			    <h3>Игорь Демьяненко</h3>
 			    <p lang="en" >Product Desinger</p>
 		    </li>
 		     <li>
            <img src="images/6.jpg" width="270" height="260" alt="persons"/>
-                                         <h3>Ольга Репина</h3>
+                                         <h3>Ольга Репіна</h3>
                                          <p lang="en">Frontend Developer</p>
 			      </li>
 			    <li>
             <img src="images/7.jpg" width="270" height="260" alt="persons"/>
-                                         <h3>Николай Тарасов</h3>
+                                         <h3>Миколай Тарасов</h3>
                                         <p lang="en">Marketing</p>
 		     </li>
 			<li>
  <img src="images/8.jpg"  width="270" height="260" alt="persons"/>
-                                         <h3>Михаил Ермаков</h3>
+                                         <h3>Михаїл Ермаков</h3>
                                          <p lang="en">Ul Designer</p>
 			      </li>
 		    
@@ -96,8 +98,8 @@
 	    <a class="logo" href="./index.html">Web<span class="logo-color-black">Studio</span></a>
 	<address>
 		<ul>
-		    <li class="adress"> г.Киев, пр-т Леси УкраинкиБ 26</li>
-            <li class="email-phone" lang="en">info@devstudio.com</li>
+		    <li class="adress"> м.Київ, пр-т Лесі Українки Б 30</li>
+            <li class="email-phone" lang="en">desheviyhasl@gmail.com</li>
             <li class="email-phone">+380961111111</li>
 					</ul>
 	    </address>
