--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			    <li><a href="#Kontakti">Контакти</a></li>
 			</ul>
 		</nav>
-			<ul class="top">
+			<ul class="top-right">
 				    <li class="right"><a href="mailto:example@mail.com">dimon_zd@i.ua</a></li>
 				    <li class="right"><a href="#Phone">+380638036740</a></li>
 			 </ul>
