--- a/index.html
+++ b/index.html
@@ -1,106 +1,106 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="ua">
     <head>
         <title>ДЗ2</title>
 		<meta charset="utf-8"/>
 	    	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
     		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-			<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"/>
+			<link rel="preconnect" href="https://fonts.googleapis.com"/>
+			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+			<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet"/>
+			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"/>
 			<link rel="stylesheet" href="css/style.css" />
-			<link rel="stylesheet" href="css/reset.css"/>
+			<linl rel="stylesheet" href="css/reset.css"/>
     </head>
     <body>
-    <header class="top-menu">
+    <header class="menu">
 		<div class="container">
 	    <a class="logo" href="./index.html">Web<span class="logo-color-black">Studio</span></a>
 		<nav class="navigation">
 			<ul>
-			    <li><a href="./index.html">Студія</a></li>
-			    <li><a href="./portfolio.html">Портфоліо</a></li>
-			    <li><a href="#Kontakti">Контакти</a></li>
+			    <li><a href="./index.html">Студія</a></li><li><a href="./portfolio.html">Портфоліо</a></li><li><a href="#Kontakti">Контакти</a></li>
 			</ul>
 		</nav>
-			<ul class="top-right">
-				    <li class="right"><a href="mailto:example@mail.com">dimon_zd@i.ua</a></li>
-				    <li class="right"><a href="#Phone">+380638036740</a></li>
-			 </ul>
-		</div>
-     </header>
+		<ul class="top">
+				    <li class="right"><a href="mailto:example@mail.com">dimon_zd@i.ua</a></li><li class="right"><a href="#Phone">+380638036740</a></li>
+			    </ul>
+			</div>
+		    </header>
     <main>
-	  <div class="container">
-	    				<section class="hero">
-					<h1>Ефективні рішення для Вшего бізнесу</h1>
-					<button type="button">Замовити послугу</button>
-	    				</section>
-        <section class="info">
+	    <section class="hero">
+		<div class="container">
+	    <h1>Ефективні рішення для вашего бізнесу</h1>
+		<button type="button">Замовити послугу</button>
+		</div>
+	    </section>
+		<div class="container">
+		<section class="info">
 		<h2>Переваги</h2>
 		<ul>
 			<li>
-				<h3>Увага до деталей</h3>
-            			<p>Переробляємо нюанси для ідеальної сдачі проєкту</p>
-		</li>
-		<li>
-		    		<h3>Пунктуальність</h3>
-				<p>Своєчасна здача матеріалу</p>
-		</li>
-                <li>
-		    		<h3>Планування</h3>
-		    		<p>Розрахунок сил та графіку роботи</p>
-		</li>
-		<li>
-            			<h3>Сучасні технології</h3>
-            			<p>Швидка розробка новітніх технологій</p>
-		</li>
+            <h3>Увага до деталей </h3>
+            <p>Перероблюємо нюанси для ідеальної здачі проекту</p>
+		    </li>
+		    <li>
+            <h3>Пунктуальність</h3>
+            <p>Своєчасне відправлення матеріалу на перевірку GitHub </p>
+	        </li>
+            <li>
+		    <h3>Планування</h3>
+            <p>Розрахунок сил та графіку роботи</p>
+			</li>
+		    <li>
+            <h3>Сучасні технології</h3>
+            <p>Швидкий розвиток сучасних технологій</p>
+		    </li>
 		</ul>
         </section>
         <section class="img">
-					<h2>Чем Ми займаємося </h2>
+									<h2>Чим ми займаємося </h2>
 		<ul>
 			<li><img src="images/0.jpg" width="370" height="294" alt="Computer coding"/></li>
 			<li><img src="images/1.jpg" width="370" height="294" alt="Computer phone"/></li>
 			<li><img src="images/2.jpg" width="370" height="294" alt="Computer color spectr"/></li>
-		</ul>
+			</ul>
         </section>
-		    </div>
+	</div>
+		</main>
             <section class="person">
-		    <div class="container">
-			<h2>Наша Команда</h2>
+				<div class="container">
+			<h2>Наша команда</h2>
 		    <ul>
 		    <li>
-			    	<img src="images/5.jpg" width="270" height="260" alt="persons"/>
-			    		<h3>Игорь Демьяненко</h3>
-			   		 <p lang="en" >Product Desinger</p>
+			    <img src="images/5.jpg" width="270" height="260" alt="persons"/>
+			    <h3>Игорь Демьяненко</h3>
+			    <p lang="en" >Product Desinger</p>
 		    </li>
 		     <li>
-           			<img src="images/6.jpg" width="270" height="260" alt="persons"/>
-                                         <h3>Ольга Репіна</h3>
-                                         <p lang="en">Frontend Developer</p>
-			      </li>
-			    <li>
-            			<img src="images/7.jpg" width="270" height="260" alt="persons"/>
-                                         <h3>Миколай Тарасов</h3>
-                                        <p lang="en">Marketing</p>
+           		<img src="images/6.jpg" width="270" height="260" alt="persons"/>
+                <h3>Ольга Репина</h3>
+                <p lang="en">Frontend Developer</p>
+			</li>
+			<li>
+            	<img src="images/7.jpg" width="270" height="260" alt="persons"/>
+                 <h3>Николай Тарасов</h3>
+                 <p lang="en">Marketing</p>
 		     </li>
 			<li>
  				<img src="images/8.jpg"  width="270" height="260" alt="persons"/>
-                                         <h3>Михаїл Ермаков</h3>
+                                         <h3>Михаил Ермаков</h3>
                                          <p lang="en">Ul Designer</p>
-			      </li>
-		    </div>
+			</li>
+		    
                                          </section>
-										
+										</div>
 	    </main>
     <footer class="footer">
 		<div class="container">
-	    <a class="logo" href="./index.html">Web<span class="logo-color-black">Studio</span></a>
+	    <a class="logo" href="./index.html">Web<span class="logo-color-white">Studio</span></a>
 	<address>
 		<ul>
-		    <li class="adress"> м.Київ, пр-т Лесі Українки Б 30</li>
+		    <li class="adress"> м.Київ, пр-т Лесі Українки Б 31</li>
             <li class="email-phone" lang="en">desheviyhasl@gmail.com</li>
-            <li class="email-phone">+380971111115</li>
+            <li class="email-phone">+380961111111</li>
 					</ul>
 	    </address>
 	</div>
