--- a/portfolio.html
+++ b/portfolio.html
@@ -1,29 +1,29 @@
-﻿<!doctype html>
-<html lang="ru">
+<!doctype html>
+<html lang="ua">
     <head>
         <title>ДЗ2-3</title>
 		<meta charset="utf-8"/>
 	    	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
     		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 			<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"/>
+			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+			<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"/>
 			<link rel="stylesheet" href="css/style.css"/>
-			<linl rel="stylesheet" href="css/reset.css"/>
+			<link rel="stylesheet" href="css/reset.css"/>
     </head>
     <body>
 	    <header class="menu">
 		<div class="container">
-<a class="logo" href="./index.html">Web<span class="logo-color-black">Studio</span></a>
-<nav class="navigation">
-<ul class="list">
-			    <li class="item"><a class="item-link" href="./index.html">Студия</a></li>
-	<li class="item"><a class="item-link" href="./portfolio.html">Портфолио</a></li>
-<li class="item"><a class="item-link" href="#Kontakti">Контакты</a></li>
-</ul>
-</nav>
-<ul class="top">
+		<a class="logo" href="./index.html">Web<span class="logo-color-black">Studio</span></a>
+		<nav class="navigation">
+		<ul class="list">
+			    <li class="item"><a class="item-link" href="./index.html">Студія</a></li>
+				<li class="item"><a class="item-link" href="./portfolio.html">Портфоліо</a></li>
+				<li class="item"><a class="item-link" href="#Kontakti">Контакти</a></li>
+		</ul>
+		</nav>
+		<ul class="top">
 				    <li class="right"><a class="item-link" href="mailto:example@mail.com">info@devstudio.com</a></li>
 				    <li class="right"><a class="item-link" href="#Phone">+380961111111</a></li>
 								    </ul>
@@ -33,9 +33,9 @@
 	  <div class="container">
 	    <nav class="top-filters">
 		<ul class="list"> 
-		<li class="item"><a class="item-link" href="#Studio">Все</a></li>
-<li class="item"><a class="item-link" type="button" href="#WebSite">Веб-сайты</a></li>
-<li class="item"><a class="item-link" type="button" href="#Kontakti">Приложение</a></li>
+<li class="item"><a class="item-link" type="button" href="#Studio">Все</a></li>
+<li class="item"><a class="item-link" type="button" href="#WebSite">Веб-сайти</a></li>
+<li class="item"><a class="item-link" type="button" href="#Kontakti">Додатки</a></li>
 <li class="item"><a class="item-link" type="button" href="#Email">Дизайн</a></li>
 <li class="item"><a class="item-link" type="button" href="#Phone">Маркетинг</a></li>
 </ul>    
@@ -45,57 +45,57 @@
 		<li class="item">
 		<img src="./images/9.jpg" alt="Веб-сайт"/>
 		<h3>Технокряк</h3>
-		<h4>Веб-сайт</h4>
+		<p>Веб-сайт</p>
 		</li class="item">
 		<li>
 		<img src="./images/10.jpg" alt="Дизайн"/>
 		<h3>Постер New Orlean vs Golden Star</h3>
-		<h4>Дизайн</h4>
+		<p>Дизайн</p>
 		</li>
 		<li class="item">
 		<img src="./images/11.jpg" alt="Приложение"/>
 		<h3>Ресторан Seafood</h3>
-		<h4>Приложение</h4>
+		<p>Додаток</p>
 		</li>
 		<li class="item">
 		<img src="./images/12.jpg" alt="Маркетинг"/>
 		<h3>Проект Prime</h3>
-		<h4>Маркетинг</h4>
+		<p>Маркетинг</p>
 		</li>
 		<li class="item">
 		<img src="./images/13.jpg" alt="Приложение"/>
 		<h3>Проект Boxes</h3>
-		<h4>Приложение</h4>
+		<p>Додаток</p>
 		</li>
 		<li class="item">
 		<img src="./images/14.jpg" alt="Веб-сайт"/>
 		<h3>Inspiration has no Borders</h3>
-		<h4>Веб-сайт</h4>
+		<p>Веб-сайт</p>
 		</li>
 		<li class="item">
 		<img src="./images/15.jpg" alt="Дизайн"/>
 		<h3>Издание Limited Edition</h3>
-		<h4>Дизайн</h4>
+		<p>Дизайн</p>
 		</li>
 		<li class="item">
 		<img src="./images/16.jpg" alt="Маркетинг"/>
 		<h3>Проект LAB</h3>
-		<h4>Маркетинг</h4>
+		<p>Маркетинг</p>
 		</li>
 		<li class="item">
 		<img src="./images/17.jpg" alt="Приложение"/>
 		<h3>Growing Business</h3>
-		<h4>Приложение</h4>
+		<p>Додаток</p>
 		</li>
 	      </section>
 		  </div>
       </main>
      <footer class="footer">
        <div class="container">
-<a class="logo" href="./index.html">Web<span class="logo-color-black">Studio</span></a>
+<a class="logo" href="./index.html">Web<span class="logo-color-white">Studio</span></a>
 	<address class="address">
 		<ul>
-		    <li class="adress"> г.Киев, пр-т Леси УкраинкиБ 26</li>
+		    <li class="adress"> м.Київ, пр-т Лесі Українки Б 32</li>
             <li class="email-phone" lang="en">info@devstudio.com</li>
             <li class="email-phone">+380961111111</li>
         </ul>
