--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="ua">
+<html lang="ru">
     <head>
         <title>ДЗ2-3</title>
 		<meta charset="utf-8"/>
@@ -15,17 +15,17 @@
     <body>
 	    <header class="menu">
 		<div class="container">
-		<a class="logo" href="./index.html">Web<span class="logo-color-black">Studio</span></a>
-		<nav class="navigation">
-		<ul class="list">
-			    <li class="item"><a class="item-link" href="./index.html">Студія</a></li>
-				<li class="item"><a class="item-link" href="./portfolio.html">Портфоліо</a></li>
-				<li class="item"><a class="item-link" href="#Kontakti">Контакти</a></li>
-		</ul>
-		</nav>
-		<ul class="top">
-				    <li class="right"><a class="item-link" href="mailto:example@mail.com">info@devstudio.com</a></li>
-				    <li class="right"><a class="item-link" href="#Phone">+380961111111</a></li>
+<a class="logo" href="./index.html">Web<span class="logo-color-black">Studio</span></a>
+<nav class="navigation">
+<ul class="list">
+			    <li class="item"><a class="top-center" href="./index.html">Студія</a></li>
+	<li class="item"><a class="top-center" href="#portfolio">Портфоліо</a></li>
+<li class="item"><a class="top-center" href="#Kontakti">Контакти</a></li>
+</ul>
+</nav>
+<ul class="top">
+				    <li class="right"><a class="contact" href="mailto:example@mail.com">dimon_zd@i.ua</a></li>
+				    <li class="right"><a class="contact" href="#Phone">+380971111114</a></li>
 								    </ul>
 									</div>
 </header>
@@ -44,48 +44,66 @@
 		<ul>
 		<li class="item">
 		<img src="./images/9.jpg" alt="Веб-сайт"/>
-		<h3>Технокряк</h3>
-		<p>Веб-сайт</p>
+		<div class="block">
+		<p>Технокряк</p>
+		<h3>Веб-сайт</h3>
+		</div>
 		</li class="item">
 		<li>
 		<img src="./images/10.jpg" alt="Дизайн"/>
-		<h3>Постер New Orlean vs Golden Star</h3>
-		<p>Дизайн</p>
+		<div class="block">
+		<p>Постер New Orlean vs Golden Star</p>
+		<h3>Дизайн</h3>
+		</div>
 		</li>
 		<li class="item">
-		<img src="./images/11.jpg" alt="Приложение"/>
-		<h3>Ресторан Seafood</h3>
-		<p>Додаток</p>
+		<img src="./images/11.jpg" alt="Додаток"/>
+		<div class="block">
+		<p>Ресторан Seafood</p>
+		<h3>Додаток</h3>
+		</div>
 		</li>
 		<li class="item">
 		<img src="./images/12.jpg" alt="Маркетинг"/>
-		<h3>Проект Prime</h3>
-		<p>Маркетинг</p>
+		<div class="block">
+		<p>Проект Prime</p>
+		<h3>Маркетинг</h3>
+		</div>
 		</li>
 		<li class="item">
-		<img src="./images/13.jpg" alt="Приложение"/>
-		<h3>Проект Boxes</h3>
-		<p>Додаток</p>
+		<img src="./images/13.jpg" alt="Додаток"/>
+		<div class="block">
+		<p>Проект Boxes</p>
+		<h3>Додаток</h3>
+		</div>
 		</li>
 		<li class="item">
 		<img src="./images/14.jpg" alt="Веб-сайт"/>
-		<h3>Inspiration has no Borders</h3>
-		<p>Веб-сайт</p>
+		<div class="block">
+		<p>Inspiration has no Borders</p>
+		<h3>Веб-сайт</h3>
+		</div>
 		</li>
 		<li class="item">
 		<img src="./images/15.jpg" alt="Дизайн"/>
-		<h3>Издание Limited Edition</h3>
-		<p>Дизайн</p>
+		<div class="block">
+		<p>Издание Limited Edition</p>
+		<h3>Дизайн</h3>
+		</div>
 		</li>
 		<li class="item">
 		<img src="./images/16.jpg" alt="Маркетинг"/>
-		<h3>Проект LAB</h3>
-		<p>Маркетинг</p>
+		<div class="block">
+		<p>Проект LAB</p>
+		<h3>Маркетинг</h3>
+		</div>
 		</li>
 		<li class="item">
-		<img src="./images/17.jpg" alt="Приложение"/>
-		<h3>Growing Business</h3>
-		<p>Додаток</p>
+		<img src="./images/17.jpg" alt="Додаток"/>
+		<div class="block">
+		<p>Growing Business</p>
+		<h3>Приложение</h3>
+		</div>
 		</li>
 	      </section>
 		  </div>
@@ -95,9 +113,9 @@
 <a class="logo" href="./index.html">Web<span class="logo-color-white">Studio</span></a>
 	<address class="address">
 		<ul>
-		    <li class="adress"> м.Київ, пр-т Лесі Українки Б 32</li>
-            <li class="email-phone" lang="en">info@devstudio.com</li>
-            <li class="email-phone">+380961111111</li>
+		    <li class="adress"><a class="item-link">м.Київ, пр-т Лесі Українки Б 29</a></li>
+            <li class="email-phone" lang="en"><a class="contact" href="mailto:example@mail.com">dimon_zd@i.ua</a></li>
+            <li class="email-phone"><a class="contact" href="#Phone">+380638036740</li>
         </ul>
 	    </address>
 	   </div>
