--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!doctype html>
-<html lang="ua">
+<!DOCTYPE html>
+<html lang="Ua">
     <head>
         <title>ДЗ3</title>
 		<meta charset="utf-8"/>
@@ -9,84 +9,83 @@
 			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 			<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
 			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"/>
-			<link rel="stylesheet" href="css/style.css" />
-			<link rel="stylesheet" href="css/reset.css"/>
+			<link rel="stylesheet" href="css/styles.css" />
     </head>
     <body>
     <header class="menu">
 		<div class="container">
 			<a class="logo" lang="en" href="./index.html">Web<span lang="en" class="logo-color-black">Studio</span></a>
 			<nav class="navigation">
-				<ul class="list">
-			    <li class="item"><a class="top-center" class="current" href="#Studio">Студiя</a></li><li class="item"><a class="top-center" class="current" href="./portfolio.html">Портфолiо</a></li><li class="item"><a class="top-center" class="current" href="#Kontakti">Контакти</a></li>
+				<ul class="navigation-list">
+			    <li class="navigation-item"><a class="navigation-link" class="current" href="#Studio">Студiя</a></li><li class="navigation-item"><a class="navigation-link" class="current" href="./portfolio.html">Портфолiо</a></li><li class="navigation-item"><a class="navigation-link" class="current" href="#Kontakti">Контакти</a></li>
 			    </ul>
 		    </nav>
-			    <ul class="top">
-				    <li class="right"><a href="mailto:example@mail.com" class="contact">dimon_zd@i.ua</a></li><li class="right"><a href="#phone" class="contact">+380638036740</a></li>
+			    <ul class="top-list">
+				    <li class="right-item"><a class="right=link" href="mailto:example@mail.com" class="contact">dimon_zd@i.ua</a></li><li class="right-item"><a class="right-link" href="#phone" class="contact">+380638036740</a></li>
 			    </ul>
 			</div>
 		    </header>
     <main>
 	    <section class="hero">
 		<div class="container">
-	    <h1>Ефективні рішення для Вашего бізнесу</h1>
-		<button type="button">Замовити послугу</button>
+	    <h1 class="hero-title-h1">Ефективні рішення для Вашего бізнесу</h1>
+		<button class="hero-button" type="button">Замовити послугу</button>
 	    </section>
 		</div>
 		<div class="container">
         <section class="info">
-		<h2>Пререваги</h2>
-		<ul>
-			<li>
-            <h3>Увага до нюансів</h3>
-            <p>Перероблюємо деталі, для ідеальної здачі проекту,замінюємо padding на margin або margini na padding.</p>
+		<h2 class="info-title-h2">Пререваги</h2>
+		<ul class="info-list">
+			<li class="info-item">
+            <h3 class="info-title-h3">Увага до нюансів</h3>
+            <p class="info-paragraf">Перероблюємо деталі, для ідеальної здачі проекту,замінюємо padding на margin або margini na padding.</p>
 			</li>
-			<li>
-            <h3>Пунктуальність</h3>
-            <p>Своєчасна здача матереалів, або не своєчасна здача проектів(</p>
+			<li class="info-item">
+            <h3 class="info-title-h3">Пунктуальність</h3>
+            <p class="info-paragraf">Своєчасна здача матереалів, або не своєчасна здача проектів(</p>
 			</li>
-            <li>
-		    <h3>Планування</h3>
-            <p>Розрахунок графіку роботи та сил, настрою та життевих обставин</p>
+            <li class="info-item">
+		    <h3 class="info-title-h3">Планування</h3>
+            <p class="info-paragraf">Розрахунок графіку роботи та сил, настрою та життевих обставин</p>
 			</li>
-			<li>
-            <h3>Сучасні технології</h3>
-            <p>Швидки новітні технології в сфері інженирії та комп*ютерної техніки </p>
+			<li class="info-item">
+            <h3 class="info-title-h3">Сучасні технології</h3>
+            <p class="info-paragraf">Швидки новітні технології в сфері інженирії та комп*ютерної техніки </p>
 			</li>
 		</ul>
         </section>
         <section class="img">
-			<h2>Чим ми займаємося </h2>
-		<ul>
-			<li><img src="images/0.jpg" width="370px" height="294px" alt="Computer coding"/></li>
-			<li><img src="images/1.jpg" width="370px" height="294px" alt="Computer phone"/></li>
-			<li><img src="images/2.jpg" width="370px" height="294px" alt="Computer color spectr"/></li>
+			<h2 class="img-title-h2">Чим ми займаємося </h2>
+		<ul class="img-list">
+			<li class="img-item"><img class="img-img" src="images/0.jpg" width="370px" height="294px" alt="Computer coding"/></li>
+			<li class="img-item"><img class="img-img" src="images/1.jpg" width="370px" height="294px" alt="Computer phone"/></li>
+			<li class="img-item"><img class="img-img" src="images/2.jpg" width="370px" height="294px" alt="Computer color spectr"/></li>
 			</ul>
         </section>
 		</div>
             <section class="person">
 			<div class="container">
-			<h2>Наша Команда</h2>
-		    <ul>
-		    <li>
-			    <img src="images/5.jpg" width="270px" height="260px" alt="persons"/>
-			    <h3>Игорь Демьяненко</h3>
-			    <p lang="en" >Product Desinger</p>
+			<h2 class="person-title-h2">Наша Команда</h2>
+		    <ul class="person-list">
+		    <li class="person-item">
+		<img class="person-img" src="images/5.jpg" width="270px" height="260px" alt="persons"/>
+		<h3 class="person-title-h3">Игорь Демьяненко</h3>
+		<p class="person-paragraf" lang="en" >Product Desinger</p>
 		    </li>
-		     <li>
-           <img src="images/6.jpg" width="270px" height="260px" alt="persons"/>
-                                         <h3>Ольга Репіна</h3>
-                                         <p lang="en">Frontend Developer</p>
+		     <li class="person-item">
+           	<img class="person-img" src="images/6.jpg" width="270px" height="260px" alt="persons"/>
+           	<h3 class="person-title-h3">Ольга Репіна</h3>
+             	<p class="person-paragraf" lang="en">Frontend Developer</p>
 			      </li>
-			    <li>
-            <img src="images/7.jpg" width="270px" height="260px" alt="persons"/>
-                                         <h3>Миколай Тарасов</h3>
-                                        <p lang="en">Marketing</p>
+			    <li class="person-item">
+            	<img class="person-img" src="images/7.jpg" width="270px" height="260px" alt="persons"/>
+             	<h3 class="persontitle-h3">Миколай Тарасов</h3>
+              	<p class="person-paragraf" lang="en">Marketing</p>
 		     </li>
-			<li>
- <img src="images/8.jpg"  width="270px" height="260px" alt="persons"/>
-                                         <h3>Михаїл Ермаков</h3>
-                                         <p lang="en">Ul Designer</p>
+			<li class="person-item">
+ 		<img class="person-img" src="images/8.jpg"  width="270px" height="260px" alt="persons"/>
+                <h3 class="person-title-h3">Михаїл Ермаков</h3>
+                <p class="person-paragraf" lang="en">Ul Designer</p>
 			      </li>
 		    
                                          </section>
@@ -97,14 +96,12 @@
 	<div class="footer">
 			<div class="container">
 	    <a class="logo" href="./index.html">Web<span class="logo-color-white">Studio</span></a>
-	<address>
-		<ul>
-		    <li class="adress"><a href="google.map"> м.Київ, пр-т Лесі Українки Б 28</a></li>
-            <li class="email-phone" lang="en"><a href="mail-to:">dimon_zd@i.ua</a></li>
-            <li class="email-phone"><a href="#phone">+380638036740</a></li>
-					</ul>
-	    </address>
-	</div>
+		<ul class="left">
+	    <li class="left-item"><a class="adress" href="google.map"> м.Київ, пр-т Лесі Українки Б 28</a></li>
+            <li class="left-item" lang="en"><a class="email-phone" href="mail-to:">dimon_zd@i.ua</a></li>
+            <li class="left-item"><a class="email-phone" href="#phone">+380638036740</a></li>
+		</ul>
+			</div>
 	</div>
 	    </footer>
     </body>
