--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
-<!doctype html>
-<html lang="ru">
+<!DOCTYPE html>
+<html lang="Ua">
     <head>
         <title>ДЗ2-3</title>
 		<meta charset="utf-8"/>
@@ -17,92 +17,92 @@
 		<div class="container">
 <a class="logo" href="./index.html">Web<span class="logo-color-black">Studio</span></a>
 <nav class="navigation">
-<ul class="list">
-			    <li class="item"><a class="top-center" href="./index.html">Студія</a></li>
-	<li class="item"><a class="top-center" href="#portfolio">Портфоліо</a></li>
-<li class="item"><a class="top-center" href="#Kontakti">Контакти</a></li>
+<ul class="class="navigation"-list">
+			    <li class="navigation-item"><a class="navigation-link" href="./index.html">Студія</a></li>
+	<li class="navigation-item"><a class="navigation-item" href="#portfolio">Портфоліо</a></li>
+<li class="navigation-item"><a class="navigation-item" href="#Kontakti">Контакти</a></li>
 </ul>
 </nav>
-<ul class="top">
-				    <li class="right"><a class="contact" href="mailto:example@mail.com">dimon_zd@i.ua</a></li>
-				    <li class="right"><a class="contact" href="#Phone">+380971111114</a></li>
+<ul class="top-list">
+				    <li class="right-item"><a class="contact-link" href="mailto:example@mail.com">dimon_zd@i.ua</a></li>
+				    <li class="right-item"><a class="contact-link" href="#Phone">+380971111114</a></li>
 								    </ul>
 									</div>
 </header>
       <main>
 	  <div class="container">
-	    <nav class="top-filters">
-		<ul class="list"> 
-<li class="item"><a class="item-link" type="button" href="#Studio">Все</a></li>
-<li class="item"><a class="item-link" type="button" href="#WebSite">Веб-сайти</a></li>
-<li class="item"><a class="item-link" type="button" href="#Kontakti">Додатки</a></li>
-<li class="item"><a class="item-link" type="button" href="#Email">Дизайн</a></li>
-<li class="item"><a class="item-link" type="button" href="#Phone">Маркетинг</a></li>
+	    <nav class="filters">
+		<ul class="filters-list"> 
+<li class="filters-item"><a class="filters-link" type="button" href="#Studio">Все</a></li>
+<li class="filters-item"><a class="filters-link" type="button" href="#WebSite">Веб-сайти</a></li>
+<li class="filters-item"><a class="filters-link" type="button" href="#Kontakti">Додатки</a></li>
+<li class="filters-item"><a class="filters-link" type="button" href="#Email">Дизайн</a></li>
+<li class="filters-item"><a class="filters-link" type="button" href="#Phone">Маркетинг</a></li>
 </ul>    
 	    </nav>
         <section class="content">
-		<ul>
-		<li class="item">
-		<img src="./images/9.jpg" alt="Веб-сайт"/>
+		<ul class="content-list">
+		<li class="content-item">
+		<img class="content-img" src="./images/9.jpg" alt="Веб-сайт"/>
 		<div class="block">
-		<p>Технокряк</p>
-		<h3>Веб-сайт</h3>
+		<p class="content-paragraf">Технокряк</p>
+		<h3 class="content-title-h3">Веб-сайт</h3>
 		</div>
-		</li class="item">
+		</li class="content-item">
 		<li>
-		<img src="./images/10.jpg" alt="Дизайн"/>
+		<img class="content-img" src="./images/10.jpg" alt="Дизайн"/>
 		<div class="block">
-		<p>Постер New Orlean vs Golden Star</p>
-		<h3>Дизайн</h3>
+		<p class="content-paragraf">Постер <span lang="en"> New Orlean vs Golden Star</span></p>
+		<h3 class="content-title-h3">Дизайн</h3>
 		</div>
 		</li>
-		<li class="item">
-		<img src="./images/11.jpg" alt="Додаток"/>
-		<div class="block">
-		<p>Ресторан Seafood</p>
-		<h3>Додаток</h3>
+		<li class="content-item">
+		<img class="content-img" src="./images/11.jpg" alt="Додаток"/>
+		<div class="block"> 
+		<p class="content-paragraf">Ресторан <span lang="en"> Seafood</span></p>
+		<h3 class="content-title-h3">Додаток</h3>
 		</div>
 		</li>
-		<li class="item">
-		<img src="./images/12.jpg" alt="Маркетинг"/>
+		<li class="content-item">
+		<img class="content-img" src="./images/12.jpg" alt="Маркетинг"/>
 		<div class="block">
-		<p>Проект Prime</p>
-		<h3>Маркетинг</h3>
+		<p class="content-paragraf">Проект <span lang="en"> Prime</span></p>
+		<h3 class="content-title-h3">Маркетинг</h3>
 		</div>
 		</li>
-		<li class="item">
-		<img src="./images/13.jpg" alt="Додаток"/>
+		<li class="content-item">
+		<img class="content-img" src="./images/13.jpg" alt="Додаток"/>
 		<div class="block">
-		<p>Проект Boxes</p>
-		<h3>Додаток</h3>
+		<p class="content-paragraf">Проект <span lang="en"> Boxes</span></p>
+		<h3 class="content-title-h3">Додаток</h3>
 		</div>
 		</li>
-		<li class="item">
-		<img src="./images/14.jpg" alt="Веб-сайт"/>
+		<li class="content-item">
+		<img class="content-img" src="./images/14.jpg" alt="Веб-сайт"/>
 		<div class="block">
-		<p>Inspiration has no Borders</p>
-		<h3>Веб-сайт</h3>
+		<p class="content-paragraf"> <span lang="en">Inspiration has no Borders</span></p>
+		<h3 class="content-title-h3">Веб-сайт</h3>
 		</div>
 		</li>
-		<li class="item">
-		<img src="./images/15.jpg" alt="Дизайн"/>
+		<li class="content-item">
+		<img class="content-img" src="./images/15.jpg" alt="Дизайн"/>
 		<div class="block">
-		<p>Издание Limited Edition</p>
-		<h3>Дизайн</h3>
+			<p class="content-paragraf">Видання <span lang="en"> Limited Edition </span></p>
+		<h3 class="content-title-h3">Дизайн</h3>
 		</div>
 		</li>
-		<li class="item">
+		<li class="content-item">
 		<img src="./images/16.jpg" alt="Маркетинг"/>
 		<div class="block">
-		<p>Проект LAB</p>
-		<h3>Маркетинг</h3>
+			<p class="content-paragraf">Проект<span lang="en"> LAB</span></p>
+		<h3 class="content-title-h3">Маркетинг</h3>
 		</div>
 		</li>
-		<li class="item">
-		<img src="./images/17.jpg" alt="Додаток"/>
+		<li class="content-item">
+		<img class="content-img" src="./images/17.jpg" alt="Додаток"/>
 		<div class="block">
-		<p>Growing Business</p>
-		<h3>Приложение</h3>
+		<p class="content-paragraf" lang="en">Growing Business</p>
+		<h3 class="content-title-h3">Додаток</h3>
 		</div>
 		</li>
 	      </section>
@@ -111,11 +111,10 @@
      <footer class="footer">
        <div class="container">
 <a class="logo" href="./index.html">Web<span class="logo-color-white">Studio</span></a>
-	<address class="address">
-		<ul>
-		    <li class="adress"><a class="item-link">м.Київ, пр-т Лесі Українки Б 29</a></li>
-            <li class="email-phone" lang="en"><a class="contact" href="mailto:example@mail.com">dimon_zd@i.ua</a></li>
-            <li class="email-phone"><a class="contact" href="#Phone">+380638036740</li>
+		<ul class="left-list">
+		    <li class="left-item" ><a class="adress"">м.Київ, пр-т Лесі Українки Б 29</a></li>
+            <li class="left-item"><a lang="en" class="email-phone" href="mailto:example@mail.com">dimon_zd@i.ua</a></li>
+            <li class="left-item"><a class="email-phone" href="#Phone">+380638036740</li>
         </ul>
 	    </address>
 	   </div>
