--- a/portfolio.html
+++ b/portfolio.html
@@ -17,10 +17,10 @@
 		<div class="container">
 <a class="logo" href="./index.html">Web<span class="logo-color-black">Studio</span></a>
 <nav class="navigation">
-<ul class="class="navigation"-list">
+<ul class="class="navigation-list">
 			    <li class="navigation-item"><a class="navigation-link" href="./index.html">Студія</a></li>
-	<li class="navigation-item"><a class="navigation-item" href="#portfolio">Портфоліо</a></li>
-<li class="navigation-item"><a class="navigation-item" href="#Kontakti">Контакти</a></li>
+	<li class="navigation-item"><a class="navigation-link" href="#portfolio">Портфоліо</a></li>
+<li class="navigation-item"><a class="navigation-link" href="#Kontakti">Контакти</a></li>
 </ul>
 </nav>
 <ul class="top-list">
