--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			    </ul>
 		    </nav>
 			    <ul class="top-list">
-				    <li class="right-item"><a class="right-link" href="mailto:example@mail.com" class="contact">dimon_zd@i.ua</a></li><li class="right-item"><a class="right-link" href="#phone" class="contact">+380638036740</a></li>
+				    <li class="right-item"><a class="contact-link" href="mailto:example@mail.com" ">dimon_zd@i.ua</a></li><li class="right-item"><a class="contact-link" href="#phone">+380638036740</a></li>
 			    </ul>
 			</div>
 		    </header>
