--- a/index.html
+++ b/index.html
@@ -1,27 +1,30 @@
-<!DOCTYPE html>
-<html lang="Ua">
+
+ <!DOCTYPE html>
+<html lang="Uk">
     <head>
         <title>ДЗ3</title>
 		<meta charset="utf-8"/>
-	    	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-			<link rel="preconnect" href="https://fonts.googleapis.com">
-			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-			<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"/>
-			<link rel="stylesheet" href="css/styles.css" />
+	    	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+			<link rel="preconnect" href="https://fonts.googleapis.com"/>
+			<link rel="preconnect" href="https://fonts.gstatic.com"/>
+			<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet"/>
+			<link rel="stylesheet" href="css/styles.css"/>
     </head>
     <body>
     <header class="menu">
-		<div class="container">
-			<a class="logo" lang="en" href="./index.html">Web<span lang="en" class="logo-color-black">Studio</span></a>
-			<nav class="navigation">
-				<ul class="navigation-list">
-			    <li class="navigation-item"><a class="navigation-link" class="current" href="#Studio">Студiя</a></li><li class="navigation-item"><a class="navigation-link" class="current" href="./portfolio.html">Портфолiо</a></li><li class="navigation-item"><a class="navigation-link" class="current" href="#Kontakti">Контакти</a></li>
-			    </ul>
-		    </nav>
-			    <ul class="top-list">
-				    <li class="right-item"><a class="contact-link" href="mailto:example@mail.com" ">dimon_zd@i.ua</a></li><li class="right-item"><a class="contact-link" href="#phone">+380638036740</a></li>
+		<div class="container" style="display:flex">
+	    <a class="logo-top" href="./index.html">Web<span class="logo-color-black">Studio</span></a>
+		<nav class="navigation">
+<ul class="navigation-list">
+<li class="navigation-item"><a class="navigation-link current"  href="./index.html">Студiя</a></li>
+<li class="navigation-item"><a class="navigation-link" href="./portfolio.html">Портфоліо</a></li>
+<li class="navigation-item"><a class="navigation-link" href="#Kontakti">Контакти</a></li>
+</ul>
+</nav>
+<ul class="top">
+				    <li class="right"><a class="item-link" href="mailto:example@mail.com">info@devstudio.com</a></li>
+				    <li class="right"><a class="item-link" href="#Phone">+380961111111</a></li>
 			    </ul>
 			</div>
 		    </header>
@@ -92,16 +95,14 @@
 										 </div>
 										
 	    </main>
-    <footer>
-	<div class="footer">
-			<div class="container">
-	    <a class="logo" href="./index.html">Web<span class="logo-color-white">Studio</span></a>
-		<ul class="left">
-	    <li class="left-item"><a class="adress" href="google.map"> м.Київ, пр-т Лесі Українки Б 28</a></li>
-            <li class="left-item" lang="en"><a class="email-phone" href="mail-to:">dimon_zd@i.ua</a></li>
-            <li class="left-item"><a class="email-phone" href="#phone">+380638036740</a></li>
-		</ul>
-			</div>
+ <footer class="footer">
+		<div class="container">
+	    <a class="logo-bottom" href="./index.html">Web<span class="logo-color-white">Studio</span></a>
+		<ul class="footer-list">
+		    	<li class="footer-item"><a  class="adress" href="google.com">м.Київ, пр-т Лесі Українки Б 37</a></li>
+            		<li class="footer-item"><a  lang="en" class="email-phone" href="mailto:">info@devstudio.com</a></li>
+            		<li class="footer-item"><a class="email-phone" href="#Phone">+380961111111</a></li>
+					</ul>
 	</div>
 	    </footer>
     </body>
