--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
 <nav class="navigation">
 <ul class="class="navigation-list">
 			    <li class="navigation-item"><a class="navigation-link" href="./index.html">Студія</a></li>
-	<li class="navigation-item"><a class="navigation-link" href="#portfolio">Портфоліо</a></li>
+	<li class="navigation-item"><a class="navigation-link current" href="#portfolio">Портфоліо</a></li>
 <li class="navigation-item"><a class="navigation-link" href="#Kontakti">Контакти</a></li>
 </ul>
 </nav>
@@ -33,11 +33,11 @@
 	  <div class="container">
 	    <nav class="filters">
 		<ul class="filters-list"> 
-<li class="filters-item"><a class="filters-link" type="button" href="#Studio">Все</a></li>
-<li class="filters-item"><a class="filters-link" type="button" href="#WebSite">Веб-сайти</a></li>
-<li class="filters-item"><a class="filters-link" type="button" href="#Kontakti">Додатки</a></li>
-<li class="filters-item"><a class="filters-link" type="button" href="#Email">Дизайн</a></li>
-<li class="filters-item"><a class="filters-link" type="button" href="#Phone">Маркетинг</a></li>
+<li class="filters-item"><button class="filters-link" type="button" href="#Studio">Все</button></li>
+<li class="filters-item"><button class="filters-link" type="button" href="#WebSite">Веб-сайти</button></li>
+<li class="filters-item"><button class="filters-link" type="button" href="#Kontakti">Додатки</button></li>
+<li class="filters-item"><button class="filters-link" type="button" href="#Email">Дизайн</button></li>
+<li class="filters-item"><button class="filters-link" type="button" href="#Phone">Маркетинг</button></li>
 </ul>    
 	    </nav>
         <section class="content">
@@ -87,14 +87,14 @@
 		<li class="content-item">
 		<img class="content-img" src="./images/15.jpg" alt="Дизайн"/>
 		<div class="block">
-			<p class="content-paragraf">Видання <span lang="en"> Limited Edition </span></p>
+		<p class="content-paragraf">Видання <span lang="en"> Limited Edition </span></p>
 		<h3 class="content-title-h3">Дизайн</h3>
 		</div>
 		</li>
 		<li class="content-item">
 		<img src="./images/16.jpg" alt="Маркетинг"/>
 		<div class="block">
-			<p class="content-paragraf">Проект<span lang="en"> LAB</span></p>
+		<p class="content-paragraf">Проект<span lang="en"> LAB</span></p>
 		<h3 class="content-title-h3">Маркетинг</h3>
 		</div>
 		</li>
@@ -110,12 +110,12 @@
       </main>
      <footer class="footer">
        <div class="container">
-<a class="logo" href="./index.html">Web<span class="logo-color-white">Studio</span></a>
+<a class="logo-bottom" href="./index.html">Web<span class="logo-color-white">Studio</span></a>
 		<ul class="left-list">
-		    <li class="left-item" ><a class="adress"">м.Київ, пр-т Лесі Українки Б 29</a></li>
-            <li class="left-item"><a lang="en" class="email-phone" href="mailto:example@mail.com">dimon_zd@i.ua</a></li>
-            <li class="left-item"><a class="email-phone" href="#Phone">+380638036740</li>
-        </ul>
+		 <li class="left-item" ><a class="adress"">м.Київ, пр-т Лесі Українки Б 29</a></li>
+           	 <li class="left-item"><a lang="en" class="email-phone" href="mailto:example@mail.com">dimon_zd@i.ua</a></li>
+            	 <li class="left-item"><a class="email-phone" href="#Phone">+380638036740</li>
+        	</ul>
 	    </address>
 	   </div>
       </footer>
