--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 <li class="navigation-item"><a class="navigation-link" href="#Kontakti">Контакти</a></li>
 </ul>
 </nav>
-<ul class="top">
-				    <li class="right"><a class="item-link" href="mailto:example@mail.com">info@devstudio.com</a></li>
-				    <li class="right"><a class="item-link" href="#Phone">+380961111111</a></li>
+<ul class="top-list">
+				    <li class="right-item"><a class="contact-link" href="mailto:example@mail.com">info@devstudio.com</a></li>
+				    <li class="right-item"><a class="contact-link" href="#Phone">+380961111111</a></li>
 			    </ul>
 			</div>
 		    </header>
