--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <main>
 	    <section class="hero">
 		<div class="container">
-	    <h1 class="hero-title-h1">Ефективні рішення для Вашего бізнесу</h1>
+	    <h1 class="hero-title-h1">Ефективні рішення<br> для Вашего бізнесу</h1>
 		<button class="hero-button" type="button">Замовити послугу</button>
 	    </section>
 		</div>
