--- a/portfolio.html
+++ b/portfolio.html
@@ -15,9 +15,9 @@
     <body>
 	    <header class="menu">
 		<div class="container">
-<a class="logo" href="./index.html">Web<span class="logo-color-black">Studio</span></a>
+<a class="logo-top" href="./index.html">Web<span class="logo-color-black">Studio</span></a>
 <nav class="navigation">
-<ul class="class="navigation-list">
+<ul class="navigation-list">
 			    <li class="navigation-item"><a class="navigation-link" href="./index.html">Студія</a></li>
 	<li class="navigation-item"><a class="navigation-link current" href="#portfolio">Портфоліо</a></li>
 <li class="navigation-item"><a class="navigation-link" href="#Kontakti">Контакти</a></li>
