--- a/portfolio.html
+++ b/portfolio.html
@@ -48,8 +48,8 @@
 		<p class="content-paragraf">Технокряк</p>
 		<h3 class="content-title-h3">Веб-сайт</h3>
 		</div>
-		</li class="content-item">
-		<li>
+		</li>
+		<li  class="content-item">
 		<img class="content-img" src="./images/10.jpg" alt="Дизайн"/>
 		<div class="block">
 		<p class="content-paragraf">Постер <span lang="en"> New Orlean vs Golden Star</span></p>
