--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,8 @@
 </header>
       <main>
 	  <div class="container">
-	    <nav class="filters">
+		  <h1 class="filters-title">Портфоліо з роботами</h1>
+		          <section class="content">
 		<ul class="filters-list"> 
 <li class="filters-item"><button class="filters-link" type="button" href="#Studio">Все</button></li>
 <li class="filters-item"><button class="filters-link" type="button" href="#WebSite">Веб-сайти</button></li>
@@ -39,8 +40,6 @@
 <li class="filters-item"><button class="filters-link" type="button" href="#Email">Дизайн</button></li>
 <li class="filters-item"><button class="filters-link" type="button" href="#Phone">Маркетинг</button></li>
 </ul>    
-	    </nav>
-        <section class="content">
 		<ul class="content-list">
 		<li class="content-item">
 		<img class="content-img" src="./images/9.jpg" alt="Веб-сайт"/>
