--- a/portfolio.html
+++ b/portfolio.html
@@ -11,6 +11,7 @@
 			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"/>
 			<link rel="stylesheet" href="css/styles.css"/>
 			<link rel="stylesheet" href="css/reset.css"/>
+	    		<link rel="stylesheet" href="css/modern-normalize.css/>
     </head>
     <body>
 	    <header class="menu">
@@ -44,64 +45,64 @@
 		<li class="content-item">
 		<img class="content-img" src="./images/9.jpg" alt="Веб-сайт"/>
 		<div class="block">
-		<p class="content-paragraf">Технокряк</p>
-		<h3 class="content-title-h3">Веб-сайт</h3>
+		<h3 class="content-paragraf">Технокряк</h3>
+		<p class="content-title-h3">Веб-сайт</p>
 		</div>
 		</li>
 		<li  class="content-item">
 		<img class="content-img" src="./images/10.jpg" alt="Дизайн"/>
 		<div class="block">
-		<p class="content-paragraf">Постер <span lang="en"> New Orlean vs Golden Star</span></p>
-		<h3 class="content-title-h3">Дизайн</h3>
+		<h3 class="content-paragraf">Постер <span lang="en"> New Orlean vs Golden Star</span></h3>
+		<p class="content-title-h3">Дизайн</p>
 		</div>
 		</li>
 		<li class="content-item">
 		<img class="content-img" src="./images/11.jpg" alt="Додаток"/>
 		<div class="block"> 
-		<p class="content-paragraf">Ресторан <span lang="en"> Seafood</span></p>
-		<h3 class="content-title-h3">Додаток</h3>
+		<h3 class="content-paragraf">Ресторан <span lang="en"> Seafood</span></h3>
+		<p class="content-title-h3">Додаток</p>
 		</div>
 		</li>
 		<li class="content-item">
 		<img class="content-img" src="./images/12.jpg" alt="Маркетинг"/>
 		<div class="block">
-		<p class="content-paragraf">Проект <span lang="en"> Prime</span></p>
-		<h3 class="content-title-h3">Маркетинг</h3>
+		<h3 class="content-paragraf">Проект <span lang="en"> Prime</span></h3>
+		<p class="content-title-h3">Маркетинг</p>
 		</div>
 		</li>
 		<li class="content-item">
 		<img class="content-img" src="./images/13.jpg" alt="Додаток"/>
 		<div class="block">
-		<p class="content-paragraf">Проект <span lang="en"> Boxes</span></p>
-		<h3 class="content-title-h3">Додаток</h3>
+		<h3 class="content-paragraf">Проект <span lang="en"> Boxes</span></h3>
+		<p class="content-title-h3">Додаток</p>
 		</div>
 		</li>
 		<li class="content-item">
 		<img class="content-img" src="./images/14.jpg" alt="Веб-сайт"/>
 		<div class="block">
-		<p class="content-paragraf"> <span lang="en">Inspiration has no Borders</span></p>
-		<h3 class="content-title-h3">Веб-сайт</h3>
+		<h3 class="content-paragraf"> <span lang="en">Inspiration has no Borders</span></h3>
+		<p class="content-title-h3">Веб-сайт</p>
 		</div>
 		</li>
 		<li class="content-item">
 		<img class="content-img" src="./images/15.jpg" alt="Дизайн"/>
 		<div class="block">
-		<p class="content-paragraf">Видання <span lang="en"> Limited Edition </span></p>
-		<h3 class="content-title-h3">Дизайн</h3>
+		<h3 class="content-paragraf">Видання <span lang="en"> Limited Edition </span></h3>
+		<p class="content-title-h3">Дизайн</p>
 		</div>
 		</li>
 		<li class="content-item">
 		<img src="./images/16.jpg" alt="Маркетинг"/>
 		<div class="block">
-		<p class="content-paragraf">Проект<span lang="en"> LAB</span></p>
-		<h3 class="content-title-h3">Маркетинг</h3>
+		<h3 class="content-paragraf">Проект<span lang="en"> LAB</span></h3>
+		<p class="content-title-h3">Маркетинг</p>
 		</div>
 		</li>
 		<li class="content-item">
 		<img class="content-img" src="./images/17.jpg" alt="Додаток"/>
 		<div class="block">
-		<p class="content-paragraf" lang="en">Growing Business</p>
-		<h3 class="content-title-h3">Додаток</h3>
+		<h3 class="content-paragraf" lang="en">Growing Business</h3>
+		<p class="content-title-h3">Додаток</p>
 		</div>
 		</li>
 	      </section>
@@ -110,6 +111,7 @@
      <footer class="footer">
        <div class="container">
 <a class="logo-bottom" href="./index.html">Web<span class="logo-color-white">Studio</span></a>
+		<address>
 		<ul class="left-list">
 		 <li class="left-item" ><a class="adress"">м.Київ, пр-т Лесі Українки Б 29</a></li>
            	 <li class="left-item"><a lang="en" class="email-phone" href="mailto:example@mail.com">dimon_zd@i.ua</a></li>
